<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".Activity.UserActivity">

    <TextView
        android:id="@+id/texte_lets_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/lets_start"
        android:textColor="@color/white"
        android:textSize="26sp" />


    <EditText
        android:id="@+id/edit_what_name"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:hint="@string/what_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="22sp"
        android:maxLines="1"
        android:imeOptions="actionNext"
        />

    <Button
        android:id="@+id/button_save"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/purpler_button"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="22sp" />


</RelativeLayout>